[project]
name = "csv-helper"
version = "0.2.0"
description = "A simple CLI for imputing masked counts in CSV data"
authors = [
    {name = "Andrew Tiu", email = "andrew.tiu88@gmail.com"},
]
dependencies = [
    "typer>=0.12.3",
    "polars>=1.2.1",
    "numpy>=2.0.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
csv-helper = "csv_helper.main:app"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.2.1",
]
