[project]
name = "csv-helper"
version = "0.2.2"
description = "A simple CLI for imputing masked counts in CSV data"
authors = [
    {name = "Andrew Tiu", email = "andrew.tiu88@gmail.com"},
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "typer>=0.12.3",
    "polars>=1.4.1",
    "numpy>=2.0.1",
]

[project.scripts]
csv-helper = "csv_helper.main:app"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.2",
]
tox = [
    "tox>=4.18.0",
    "tox-pdm>=0.7.2",
]

[tool.pdm.scripts]
test = "pytest tests -v"
